--- a/WEBSITE/lista_prodotti.html
+++ b/WEBSITE/lista_prodotti.html
@@ -610,7 +610,7 @@
                                     '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                     '<div class="row rigarespo" style="margin-bottom:10px"> <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 text-center prezzi_scont col-scontati">'+data['device_'+i]["prezzo_intero"]+'€'+'</div><div class="col-md-5 col-sm-5 text-center prezzi col-scontati">'+data['device_'+i]["prezzo_scontato"]+'€</div></div>'+
                                     '<p class="rate">&nbsp;</p>'+
-                                    '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                    '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                     '</div>'+
                                     '</div>'
                                 );
@@ -625,7 +625,7 @@
                                         '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                         '<p class="text-center prezzi">'+data['device_'+i]["prezzo_rate"]+'€/mese</p>'+
                                         '<p class="text-center rate">in '+data['device_'+i]["n_rate"]+' rate senza interessi</p>'+
-                                        '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                        '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                         '</div>'+
                                         '</div>'
                                     );
@@ -640,7 +640,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
@@ -654,7 +654,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
@@ -706,7 +706,7 @@
                                     '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                     '<div class="row rigarespo" style="margin-bottom:10px"> <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 text-center prezzi_scont col-scontati">'+data['device_'+i]["prezzo_intero"]+'€'+'</div><div class="col-md-5 col-sm-5 text-center prezzi col-scontati">'+data['device_'+i]["prezzo_scontato"]+'€</div></div>'+
                                     '<p class="rate">&nbsp;</p>'+
-                                    '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                    '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                     '</div>'+
                                     '</div>'
                                 );
@@ -721,7 +721,7 @@
                                         '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                         '<p class="text-center prezzi">'+data['device_'+i]["prezzo_rate"]+'€/mese</p>'+
                                         '<p class="text-center rate">in '+data['device_'+i]["n_rate"]+' rate senza interessi</p>'+
-                                        '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                        '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                         '</div>'+
                                         '</div>'
                                     );
@@ -736,7 +736,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
@@ -750,7 +750,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
